# cal_book_hours

./: README.md  pyproject.toml
.cursor/plans/: google_calendar_exporter_cli_bd12b1e0.plan.md
.dev/plans/: PLAN.md
docs/: README.md
src/cal_exporter/: __init__.py  __main__.py  cli.py  filters.py  models.py
src/cal_exporter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/cal_exporter/exporters/: __init__.py  csv_export.py  json_export.py  ods_export.py  pdf_export.py  terminal.py  xlsx_export.py
src/cal_exporter/fetchers/: __init__.py  google_api.py  ical.py  local_ical.py
tests/: __init__.py  test_calendar.ics  test_cli.py  test_exporters.py  test_fetchers.py  test_filters.py  test_models.py
